# collatz

./: Cargo.toml  NOTICE  README.md
collatz_conjecture/src/: lib.rs
src/: main.rs
